--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.8.0",
+    "graphql-request": "^4.3.0",
+    "meilisearch": "^0.27.0",
     "next": "11.1.2",
+    "nextjs-cors": "^2.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "graphql": "^16.6.0",
+    "prisma": "^4.8.0"
   }
 }
