--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "uid": "^2.0.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "graphql": "^16.6.0",
